# avocado-ripening

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.override.yaml  docker-compose.yaml  prefect.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cd-deploy.yaml  ci-tests.yaml
app/: main.py
app/data/: load_dataset.py  preprocess_dataset.py
docs/: mkdocs.yml
docs/docs/: index.md
mlflow/: Dockerfile
notebooks/: 01_preprocess_data.ipynb  02_exploratory_data_analysis.ipynb  03_CNN_feature_extraction.ipynb  04_CNN_fine_tuning.ipynb  split_data.ipynb  test-notebook-template.ipynb  training-notebook-template.ipynb
pipelines/: flows.py  test.py
src/: main.py
tests/: conftest.py  test_api.py
