[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "avocado_ripening"
version = "0.0.1"
description = "A Deep Learning project for predicting the ripening of avocado images."
authors = [
  { name = "lepcodes" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"

