[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "avocado-ripening"
version = "0.0.1"
description = "A Deep Learning project for predicting the ripening of avocado images."
authors = [
  { name = "lepcodes" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = "~=3.10.0"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
